manifests/network-policies/kube-system/network-policy-hubble-ui.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s-app: hubble-ui
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
    # hubble-ui-httproute (Gateway API), arrives as world.
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: hubble-relay
      toPorts:
        - ports:
            - port: "4245"
              protocol: TCP
